# injectionkit

./: README.md  pyproject.toml
.github/workflows/: test.yml
example/: helloworld.py
src/injectionkit/: __init__.py  _app.py  _container.py  app.py  option.py  reflect.py
src/injectionkit/reflect/: _function.py  _type.py  types.py
tests/: test_annotated.py  test_app.py  test_callable.py  test_constructor.py  test_container.py  test_generic.py  test_reflect.py  test_signatureof.py  test_typeof.py
