[project]
name = "injectionkit"
version = "1.0.0"
description = "Dependency Injection framework for Python"
readme = "README.md"
authors = [{ name = "Cylix Lee", email = "cylix.lee@outlook.com" }]
requires-python = ">=3.10"
dependencies = ["frozenlist>=1.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.18.2", "pytest>=8.4.2", "typing-extensions>=4.15.0"]

[tool.ruff]
line-length = 120

[tool.basedpyright]
reportAny = false
reportUnknownMemberType = false
